name:                tetris
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Piece
                     , Terminal
                     , TetrisGame
                     , Tetris
  build-depends:       base >= 4.7 && < 5
  -- ghc-options:         -fforce-recomp
  default-language:    Haskell2010

executable tetris-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fforce-recomp
  build-depends:       base
                     , tetris
  default-language:    Haskell2010